--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<font size="7" Color="gray"> Mi pagina web<B>
+<html>
+<head>
+<title> <font size="7" Color="gray"> Mi pagina web<B> </title>
+</head>
+<body>
 <HR color="red" size="50">
 <HR color="green" size="40">
 <HR color="yellow" size="30">
+</body>
+</html>
