--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-<title> <font size="7" Color="gray"> Mi pagina web<B> </title>
+<title>  </title>
 </head>
 <body>
+<font size="7" Color="gray"> Mi pagina web<B>
 <HR color="red" size="50">
 <HR color="green" size="40">
 <HR color="yellow" size="30">
