--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>  </title>
+<title> Mi pagina web </title>
 </head>
 <body>
-<font size="7" Color="gray"> Mi pagina web<B>
+<font size="7" Color="gray"> hola<B>
 <HR color="red" size="50">
 <HR color="green" size="40">
 <HR color="yellow" size="30">
