--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> La no persona </title>
+<title> lanopersona </title>
 </head>
 <body>
 <font size="7" Color="gray"> MI pagina web <B>
