--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <HR color="red" size="50">
 <HR color="green" size="40">
 <HR color="yellow" size="30">
+  
+  
+<a href=https://github.com/lanopersona/galeria.html.git>text del enllaç</a>
 </body>
 </html>
