--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <HR color="yellow" size="30">
   
   
-<a href=https://github.com/lanopersona/galeria.html.git>text del enllaç</a>
+<a href=https://github.com/lanopersona/galeria.html.git>Galeria</a>
 </body>
 </html>
