--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 </head>
 <body>
 <font size="7" Color="gray"> MI pagina web <B>
-<HR color="red" size="50">
-<HR color="green" size="40">
-<HR color="yellow" size="30">
   
-  
-<a href=https://github.com/lanopersona/galeria.html.git>Galeria</a>
+<a href=Galeria>Galeria</a>
 </body>
 </html>
