--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <title> lanopersona </title>
 </head>
 <body>
-<font size="7" Color="gray"> MI pagina web <B>
+<center>
+<h1> <font size="7" Color="gray"> Mi pagina web <B> </h1>
   
-<a href=Galeria>Galeria</a>
+<h2> <a href=galeria.html>Galeria</a> </h2>
 </body>
+</center>
 </html>
