--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center>
 <h1> <font size="7" Color="gray"> Mi pagina web <B> </h1>
   
-<h2> <a href=galeria.html>Galeria</a> </h2>
+<h2> <a href=galeria>Galeria</a> </h2>
 </body>
 </center>
 </html>
