--- a/macaco.html
+++ b/macaco.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
       <center>
-        <li><a href="indice.html">inicio</a></li>
+        <li><a href="index.html">inicio</a></li>
         </center>
       </ul>
     </nav>
