--- a/oso_de_agua.html
+++ b/oso_de_agua.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
       <center>
-        <li><a href="indice.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="girafa.html">Jirafa</a></li>
         <li><a href="zorro.html">Zorro</a></li>
         <li><a href="tiburón.html">Tiburón</a></li>
