--- a/tiburón.html
+++ b/tiburón.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
       <center>
-        <li><a href="indice.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="girafa.html">Jirafa</a></li>
         <li><a href="zorro.html">Zorro</a></li>
         <li><a href="oso_de_agua.html">Oso de agua</a></li>
